# llmchess

./: .gitignore  LICENSE  README.md  pyproject.toml  workflow.sh
llmchess/: inference.py  preprocess_data.py  train.py
