[project]
name = "llmchess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.47.0",
    "datasets>=4.1.1",
    "peft>=0.17.1",
    "python-chess>=1.999",
    "transformers>=4.56.2",
    "trl==0.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
